--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,13 @@ body {
   overflow-x: hidden;
 }
 
+.bg-grid {
+  background-image:
+    linear-gradient(rgba(0, 0, 0, 0.03) 1px, transparent 1px),
+    linear-gradient(90deg, rgba(0, 0, 0, 0.03) 1px, transparent 1px);
+  background-size: 20px 20px; /* Size of the grid squares */
+}
+
 .fade-x-gradient {
   position: relative;
 }
