--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   src: url('./assets/ofont.ru_Avenir Next.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @tailwind base;
